--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,21 @@
+<app-navbar></app-navbar>
 <div class="container">
   <h1>Welcome to Exam Portal!</h1>
-  <button class="btn btn-primary">Click Me!</button>
-  <button mat-raised-button color="primary">Click Me</button>
+  <div class="row">
+    <div class="col-md-6">
+      <h1>LEFT SIDE</h1>
+      <button class="btn btn-primary">Click Me!</button>
+    </div>
+    <div class="col-md-6">
+      <H1> RIGHT SIDE</H1>
+
+      <div class="mt-2">
+        <button mat-raised-button color="primary">Click Me</button>
+      </div>
+    </div>
+  </div>
+
+
+
 </div>
 
