--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-navbar></app-navbar>
+
 <div class="container">
-  <h1>Welcome to Exam Portal!</h1>
+  <app-navbar></app-navbar>
+<router-outlet></router-outlet>
+  <!-- <h1>Welcome to Exam Portal!</h1>
   <div class="row">
     <div class="col-md-6">
       <h1>LEFT SIDE</h1>
@@ -13,7 +15,7 @@
         <button mat-raised-button color="primary">Click Me</button>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 
