--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -5,41 +5,59 @@
         <img src="../../../assets/logo.png" alt="">
       </div>
       <h1 class="text-center">Register Here!</h1>
-      <!-- {{user | json}} -->
-      <form>
+      {{user | json}}
+      <form (ngSubmit)="formSubmit()">
         <!-- Username -->
         <mat-form-field appearance="outline" class="full-length">
           <mat-label>Username</mat-label>
-          <input matInput placeholder="Enter here">
+          <input
+          [(ngModel)]='user.userName'
+          name="userName"
+          matInput placeholder="Enter here">
         </mat-form-field>
         <!-- Password -->
         <mat-form-field appearance="outline" class="full-length">
           <mat-label>Password</mat-label>
-          <input type="password" matInput placeholder="Enter here">
+          <input
+          [(ngModel)]='user.password'
+          name="password"
+          type="password" matInput placeholder="Enter here">
         </mat-form-field>
         <!-- First Name -->
         <mat-form-field appearance="outline" class="full-length">
           <mat-label>First Name</mat-label>
-          <input matInput placeholder="Enter here">
+          <input
+          [(ngModel)]='user.firstName'
+          name="firstName"
+          matInput placeholder="Enter here">
         </mat-form-field>
         <!-- Last Name -->
         <mat-form-field appearance="outline" class="full-length">
           <mat-label>Last Name</mat-label>
-          <input matInput placeholder="Enter here">
+          <input
+          [(ngModel)]='user.lastName'
+          name="lastName"
+          matInput placeholder="Enter here">
         </mat-form-field>
         <!-- Email -->
         <mat-form-field appearance="outline" class="full-length">
           <mat-label>Email</mat-label>
-          <input type="email" matInput placeholder="Enter here">
+          <input
+          [(ngModel)]='user.email'
+          name="email"
+          type="email" matInput placeholder="Enter here">
         </mat-form-field>
         <!-- Phone -->
         <mat-form-field appearance="outline" class="full-length">
           <mat-label>Phone Number</mat-label>
-          <input type="number" matInput placeholder="Enter here">
+          <input
+          [(ngModel)]='user.phone'
+          name="phone"
+          type="number" matInput placeholder="Enter here">
         </mat-form-field>
 
         <div class="container text-center">
-          <button mat-raised-button color="primary">Register</button>
+          <button type="submit" mat-raised-button color="primary">Register</button>
           <button mat-raised-button color="primary" class="ms-2" style="width: 90px;">Reset</button>
         </div>
 
