--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -5,7 +5,7 @@
         <img src="../../../assets/logo.png" alt="">
       </div>
       <h1 class="text-center">Register Here!</h1>
-      {{user | json}}
+      <!-- {{user | json}} -->
       <form (ngSubmit)="formSubmit()">
         <!-- Username -->
         <mat-form-field appearance="outline" class="full-length">
@@ -14,6 +14,7 @@
           [(ngModel)]='user.userName'
           name="userName"
           matInput placeholder="Enter here">
+          <mat-hint>User name must be unique!</mat-hint>
         </mat-form-field>
         <!-- Password -->
         <mat-form-field appearance="outline" class="full-length">
