Adds the Login Component

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row mt20">
+    <div class="col-md-6 offset-md-3">
+      <mat-card>
+      <div class="container text-center">
+        <img src="../../../assets/logo.png" alt="">
+      </div>
+      <h1 class="text-center">Welcome to Log in page!</h1>
+      <form >
+        <!-- Username Field -->
+        <mat-form-field appearance="outline" class="full-length">
+          <mat-label>Username</mat-label>
+          <input
+          required
+          name="userName"
+          matInput placeholder="Enter here">
+          <!-- <mat-hint>User name must be unique!</mat-hint> -->
+        </mat-form-field>
+
+        <!-- Password Field -->
+        <mat-form-field appearance="outline" class="full-length">
+          <mat-label>Password</mat-label>
+          <input
+          required
+          name="password"
+          matInput placeholder="Enter here">
+          <!-- <mat-hint>User name must be unique!</mat-hint> -->
+        </mat-form-field>
+        <div class="container text-center">
+          <button type="submit" mat-raised-button color="primary" >Login</button>
+          <button type="reset" mat-raised-button color="primary" class="ms-3" >Cancel</button>
+        </div>
+      </form>
+    </mat-card>
+    </div>
+  </div>
+</div>
