--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<h1>Welcome to Exam Portal!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 text-center mt-2">
+      <h1>Welcome to Exam Portal!</h1>
+    </div>
+  </div>
+</div>
