--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row mt20">
+  <div class="row">
     <div class="col-md-6 offset-md-3">
       <mat-card>
       <div class="container text-center">
