--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <div class="row mt-3">
+  <div class="row ">
     <div class="col-md-6 offset-md-3">
+      <mat-card>
       <div class="container text-center">
         <img src="../../../assets/logo.png" alt="">
       </div>
@@ -67,6 +68,7 @@
         </div>
 
       </form>
+    </mat-card>
     </div>
   </div>
 </div>
